--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   border-radius: 32px;
-  box-shadow: inset 0 -7px 11px #a48fff1f;
+  box-shadow: inset 0 -7px 11px #fcad03;
   display: flex;
 
   position: relative;
@@ -43,7 +43,7 @@
       rgba(60, 8, 126, 0.32) 100%
     ),
     rgba(113, 47, 255, 0.12);
-  box-shadow: inset 0 0 12px #bf97ff3d;
+  box-shadow: inset 0 0 12px #fcad03;
 }
 .button-primary:hover {
   background: linear-gradient(
@@ -52,7 +52,7 @@
       rgba(60, 8, 126, 0.42) 100%
     ),
     rgba(113, 47, 255, 0.24);
-  box-shadow: inset 0 0 12px #bf97ff70;
+  box-shadow: inset 0 0 12px #fcad03;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
