--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
       rgba(255, 255, 255, 0.4),
       rgba(255, 255, 255, 0.4)
     ),
-    linear-gradient(90.01deg, #e59cff 0.01%, #ba9cff 50.01%, #9cb2ff 100%);
+    linear-gradient(90.01deg, #000000 0.01%, #000000 50.01%, #000000 100%);
   background-blend-mode: normal, screen;
   -webkit-background-clip: text;
   background-clip: text;
@@ -27,7 +27,7 @@
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   border-radius: 32px;
-  box-shadow: inset 0 -7px 11px #fcad03;
+  box-shadow: inset 0 -7px 11px #0000001f;
   display: flex;
 
   position: relative;
@@ -35,7 +35,10 @@
   width: max-content;
   transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow;
 }
-
+html, body {
+  background-color: black;
+  color: white; /* Ensures text is visible */
+}
 .button-primary {
   background: linear-gradient(
       180deg,
@@ -43,7 +46,7 @@
       rgba(60, 8, 126, 0.32) 100%
     ),
     rgba(113, 47, 255, 0.12);
-  box-shadow: inset 0 0 12px #fcad03;
+  box-shadow: inset 0 0 12px #00b3ff3d;
 }
 .button-primary:hover {
   background: linear-gradient(
@@ -52,7 +55,7 @@
       rgba(60, 8, 126, 0.42) 100%
     ),
     rgba(113, 47, 255, 0.24);
-  box-shadow: inset 0 0 12px #fcad03;
+  box-shadow: inset 0 0 12px #00b3ff70;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -63,7 +66,16 @@
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
-
+.description-class { 
+  white-space: pre-line; /* Ensures \n works */
+}
+html {
+  scroll-behavior: smooth;
+}
+.security-section {
+  background-color: black;
+  color: white;
+}
 
 
 html {
